добавлены мета теги

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Dctninja</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" lang="ru" content="дкт нинзя апи эмулятор коллтрекинг динамический виджет ютм документация">
+  <meta name="description" content="Динамический коллтрекинг. Компоновщик URL. Документация. Эмулятор API.">
+  <meta name="resource-type" content ="document">
+  <meta name="robots" content="index, follow">
+  <title>Dynamic Calltracking - Now you see me, now you don't..</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
