--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,29 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" lang="ru" content="дкт нинзя апи эмулятор коллтрекинг динамический виджет ютм документация">
   <meta name="description" content="Динамический коллтрекинг. Компоновщик URL. Документация. Эмулятор API.">
-  <meta name="resource-type" content ="document">
+  <meta name="resource-type" content="document">
   <meta name="robots" content="index, follow">
   <title>Dynamic Calltracking - Now you see me, now you don't..</title>
   <base href="/">
-
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
-  <app-root></app-root>
+  <app-root>
+    <link rel="stylesheet" href="/assets/loader.css">
+    <div class="loader">
+      <div class="la-ball-scale-multiple la-2x">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+  </app-root>
 </body>
+
 </html>
